--- a/api/composer.json
+++ b/api/composer.json
@@ -12,7 +12,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.12",
         "guzzlehttp/guzzle": "^7.4",
-        "lexik/jwt-authentication-bundle": "^2.16",
+        "lexik/jwt-authentication-bundle": "^2.18",
         "nelmio/cors-bundle": "^2.2",
         "phpdocumentor/reflection-docblock": "^5.3",
         "stof/doctrine-extensions-bundle": "^1.7",
@@ -37,9 +37,12 @@
         "api-platform/schema-generator": "^4.0",
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "fakerphp/faker": "^1.20",
+        "hautelook/alice-bundle": "^2.12",
+        "phpunit/phpunit": "^10.0",
         "symfony/browser-kit": "6.1.*",
         "symfony/css-selector": "6.1.*",
         "symfony/debug-bundle": "6.1.*",
+        "symfony/http-client": "6.1.*",
         "symfony/maker-bundle": "^1.44",
         "symfony/phpunit-bridge": "6.1.*",
         "symfony/stopwatch": "6.1.*",
