--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 /.env
 /helm/api-platform/charts/*
 !/helm/api-platform/charts/.gitignore
+
+/api/.env
+/api/.env.test
+
+docker-compose.yml
+docker-compose.override.yml
+docker-compose.prod.yml
