--- a/api/composer.json
+++ b/api/composer.json
@@ -29,6 +29,7 @@
         "symfony/runtime": "6.1.*",
         "symfony/security-bundle": "6.1.*",
         "symfony/serializer": "6.1.*",
+        "symfony/string": "6.1.*",
         "symfony/twig-bundle": "6.1.*",
         "symfony/uid": "6.1.*",
         "symfony/validator": "6.1.*",
