--- a/api/config/packages/security.yaml
+++ b/api/config/packages/security.yaml
@@ -36,9 +36,9 @@ security:
         - { path: ^/users/me, roles: ROLE_USER }
         - { path: ^/, roles: IS_AUTHENTICATED_FULLY }
 
-    # role_hierarchy:
-    #     ROLE_ADMIN: ROLE_COACH
-    #     ROLE_COACH: ROLE_CUSTOMER
+    role_hierarchy:
+        ROLE_ADMIN: ROLE_BLOGER
+        ROLE_BLOGER: ROLE_USER
         
 when@test:
     security:
