--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-/.env
 /helm/api-platform/charts/*
 !/helm/api-platform/charts/.gitignore
 
@@ -8,3 +7,6 @@
 docker-compose.yml
 docker-compose.override.yml
 docker-compose.prod.yml
+
+api/.env
+.env
