reset password final + popup component

--- a/api/config/packages/security.yaml
+++ b/api/config/packages/security.yaml
@@ -34,6 +34,7 @@ security:
         - { path: ^/authentication_token, roles: PUBLIC_ACCESS }
         - { path: ^/users, methods: POST, roles: PUBLIC_ACCESS }
         - { path: ^/users, methods: PATCH, roles: PUBLIC_ACCESS }
+        - { path: ^/users, methods: GET, roles: PUBLIC_ACCESS }
         - { path: ^/users/me, roles: ROLE_USER }
         - { path: ^/, roles: IS_AUTHENTICATED_FULLY }
 
