--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-free": "^6.4.0",
     "axios": "^1.2.2",
     "bootstrap": "^5.2.3",
+    "moment": "^2.29.4",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
