--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,13 +3,13 @@ name: CI
 on:
   push:
     branches:
-      - main
+      - master
   pull_request: ~
   workflow_dispatch: ~
 
 jobs:
-  tests:
-    name: Tests
+  api-tests:
+    name: Install API
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -32,17 +32,36 @@ jobs:
             esac
           done
           exit 1
-      - name: Check HTTP reachability
-        run: curl -v -o /dev/null http://localhost
-      - name: Check HTTPS reachability
-        run: curl  -vk -o /dev/null https://localhost
-      - name: Create test database
+      - name: Create database
         run: |
-          docker compose exec -T php bin/console -e test doctrine:database:create
-          docker compose exec -T php bin/console -e test doctrine:migrations:migrate --no-interaction
-      - name: PHPUnit
-        run: docker compose exec -T php bin/phpunit
-      - name: Doctrine Schema Validator
-        run: docker compose exec -T php bin/console doctrine:schema:validate --skip-sync
-      - name: Jest
-        run: docker compose exec -T pwa yarn test --ci --passWithNoTests
+          docker compose exec php composer install
+          docker compose exec php bin/console make:migration
+          docker compose exec php bin/console doctrine:migrations:migrate --no-interaction
+          docker compose exec php bin/console doctrine:fixtures:load --no-interaction
+
+  api-deploy:
+    name: Deploy API
+    needs: api-tests
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Deploy to DigitalOcean
+        uses: appleboy/scp-action@v1
+        with:
+          host: ${{ secrets.DIGITALOCEAN_HOST }}
+          username: ${{ secrets.DIGITALOCEAN_USERNAME }}
+          key: ${{ secrets.DIGITALOCEAN_SSH_KEY }}
+          source: "path/to/build/files"
+          target: "/path/on/droplet"
+
+      - name: Restart Server
+        uses: appleboy/ssh-action@v0.2.0
+        with:
+          host: ${{ secrets.DIGITALOCEAN_HOST }}
+          username: ${{ secrets.DIGITALOCEAN_USERNAME }}
+          key: ${{ secrets.DIGITALOCEAN_SSH_KEY }}
+          script: |
+            sudo service nginx restart  # Exemple pour redémarrer le serveur web (à adapter à votre configuration)
