--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,40 +8,8 @@ on:
   workflow_dispatch: ~
 
 jobs:
-  api-tests:
-    name: Install API
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Pull images
-        run: docker compose pull --ignore-pull-failures || true
-      - name: Start services
-        run: docker compose up --build -d
-      - name: Wait for services
-        run: |
-          while status="$(docker inspect --format="{{if .Config.Healthcheck}}{{print .State.Health.Status}}{{end}}" "$(docker compose ps -q php)")"; do
-            case $status in
-              starting) sleep 1;;
-              healthy) exit 0;;
-              unhealthy)
-                docker compose ps
-                docker compose logs
-                exit 1
-              ;;
-            esac
-          done
-          exit 1
-      - name: Create database
-        run: |
-          docker compose exec php composer install
-          docker compose exec php bin/console make:migration
-          docker compose exec php bin/console doctrine:migrations:migrate --no-interaction
-          docker compose exec php bin/console doctrine:fixtures:load --no-interaction
-
   api-deploy:
     name: Deploy API
-    needs: api-tests
     runs-on: ubuntu-latest
 
     steps:
@@ -49,19 +17,21 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Deploy to DigitalOcean
-        uses: appleboy/scp-action@v1
+        uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.DIGITALOCEAN_HOST }}
           username: ${{ secrets.DIGITALOCEAN_USERNAME }}
           key: ${{ secrets.DIGITALOCEAN_SSH_KEY }}
-          source: "path/to/build/files"
-          target: "/path/on/droplet"
+          source: "challenge-jardinerie-final"
+          target: "/challenge-jardinerie-final"
 
       - name: Restart Server
-        uses: appleboy/ssh-action@v0.2.0
+        uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.DIGITALOCEAN_HOST }}
           username: ${{ secrets.DIGITALOCEAN_USERNAME }}
           key: ${{ secrets.DIGITALOCEAN_SSH_KEY }}
           script: |
-            sudo service nginx restart  # Exemple pour redémarrer le serveur web (à adapter à votre configuration)
+            SERVER_NAME=challenge-jardinerie.site \ 
+            docker compose up -d  
+            # Exemple pour redémarrer le serveur web (à adapter à votre configuration)
