--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,25 +13,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Deploy to DigitalOcean
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.DIGITALOCEAN_HOST }}
-          username: ${{ secrets.DIGITALOCEAN_USERNAME }}
-          key: ${{ secrets.DIGITALOCEAN_SSH_KEY }}
-          source: "challenge-jardinerie-final"
-          target: "/challenge-jardinerie-final"
-
-      - name: Restart Server
+      - name: Deploy Digital Ocean
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.DIGITALOCEAN_HOST }}
           username: ${{ secrets.DIGITALOCEAN_USERNAME }}
           key: ${{ secrets.DIGITALOCEAN_SSH_KEY }}
           script: |
+            ssh ${{ secrets.DIGITALOCEAN_USERNAME }}@${{ secrets.DIGITALOCEAN_HOST }}
+            cd challenge-jardinerie-final
+            docker compose down
+            git pull origin master
             SERVER_NAME=challenge-jardinerie.site \ 
-            docker compose up -d  
-            # Exemple pour redémarrer le serveur web (à adapter à votre configuration)
+            docker compose up -d
