--- a/api/config/packages/security.yaml
+++ b/api/config/packages/security.yaml
@@ -50,7 +50,7 @@ security:
         - { path: ^/demande_bloggers, methods: GET, roles: ROLE_ADMIN }
         - { path: ^/demande_bloggers, methods: POST, roles: ROLE_USER }
 
-        - { path: ^/, roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/, roles: PUBLIC_ACCESS }
 
     role_hierarchy:
         ROLE_ADMIN: ROLE_BLOGER
