--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test:unit": "vitest --environment jsdom --root src/"
+    "test": "vitest --environment jsdom --root src/"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
@@ -18,8 +18,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
-    "@vue/test-utils": "^2.2.6",
-    "jsdom": "^20.0.3",
+    "@vue/test-utils": "^2.3.2",
     "vite": "^4.0.0",
     "vitest": "^0.25.6"
   }
